testsuite/tests/package/package07e.hs
module Package07e where
import MyHsTypes
import HsTypes
import HsUtils
import UniqFM
